--- a/style.css
+++ b/style.css
@@ -39,6 +39,16 @@ h2 {
       font-size: 2rem;
 }
 
+
+main {
+      display: flex;
+      flex-direction: column;
+      flex-wrap: wrap;
+      align-items: center;
+      justify-content: center;
+}
+
+
 /* NAVIGATION BAR */
 header {
       width: 100%;
@@ -80,12 +90,11 @@ header {
       text-decoration: none;
 }
 
-   @media only screen and (max-width: 500px) {
+@media only screen and (max-width: 500px) {
+    
       .navbar {
-            flex-direction: row;
+            /* flex-direction: row; */
             justify-content: space-around;
-            gap: 3rem;
-
       }
 
       .navbar #logo {
@@ -94,9 +103,14 @@ header {
 
       .navbar ul {
             display: flex;
-      
       }
-   }
+
+      .navbar ul li {
+            display: inline;
+            padding: 5px 10px;
+      }
+}
+
 
 
 /* BANNER */
@@ -109,7 +123,6 @@ header {
       background-repeat: no-repeat;
       background-position: center;
       background-attachment: fixed;
-      width: 100%;
       height: 37rem;
       display: flex;
       align-items: center;
@@ -155,18 +168,19 @@ button {
 
 @media only screen and (max-width: 500px) {
       .hero {
-            width: 50rem;
-            height: 30rem;
+            width: auto;
+            height: auto;
       }
 
       .hero-box h1 {
-            font-size: 4rem;
+            font-size: 3rem;
       }
 
       .hero-box h2 {
-            font-size: 2.5rem;
+            font-size: 1.5rem;
       }
 }
+
 
 /* CLASSES */
 
@@ -296,22 +310,22 @@ button {
 }
 
 
-@media only screen and (max-width: 975px) {
+/* @media only screen and (max-width: 975px) {
       .team-box {
        justify-content: center;
       }
 
       .feature {
-            width: 30rem;
+            width: auto;
       }
-}
+} 
 
-@media only screen and (max-width: 500px) {
+/* @media only screen and (max-width: 500px) {
       .feature {
-            width: 40rem;
-            height: 50rem;
+            width:fit-content;
+            height: fit-content;
       }
-}
+} */
 
 
 /* FOOTER */
@@ -353,13 +367,14 @@ footer {
 
 @media only screen and (max-width: 840px) {
       footer {
-            width: 840px;
             margin: 0px;
       }
 
       .footer {
+            height:fit-content;
+            width: 100%;
             flex-direction: column;
-            gap: 2rem;
+            gap: 0.25rem;
       }
 
       #footer-logo {
